Applied a different background color on messages depending on the user - added scrollbar for the messages - fixed the Form at the bottom of the viewport

--- a/src/components/Chatroom/styles.scss
+++ b/src/components/Chatroom/styles.scss
@@ -6,7 +6,8 @@
   
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
 
   background: vars.$blue-light;
+  overflow: hidden;
 }
